Delete action and View

--- a/templates/shoes/index.html.twig
+++ b/templates/shoes/index.html.twig
@@ -23,6 +23,7 @@
                     <td>{{ shoes.price }}</td>
                     <td>
                         <a href="{{ path('shoes_view', {'id': shoes.id}) }} " class='btn btn-success'>View</a>
+                        <a href="{{ path('shoes_delete', {'id': shoes.id}) }}" class='btn btn-danger'>Delete</a>
 
 
 
