--- a/templates/shoes/index.html.twig
+++ b/templates/shoes/index.html.twig
@@ -34,6 +34,6 @@
             </tbody>
         </table>
     </div>
-
+    <a href="{{ path('shoes_create') }}" class="btn btn-primary">Create new</a>
 
 {% endblock %}
