--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,9 +29,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="{{ path('shoes_list') }}" class="active">Home</a></li>
-
-
+                <li><a href="{{ path('shoes_list') }}" class="active">Shoes</a></li>
+                <li><a href="{{ path('supplier_list') }}" class="active">Supplier</a></li>
+                <li><a href="{{ path('user_list') }}" class="active">User</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
