--- a/templates/supplier/index.html.twig
+++ b/templates/supplier/index.html.twig
@@ -21,7 +21,7 @@
                     <td>
                         <a href="{{ path('supplier_view', {'id': supplier.id}) }} " class='btn btn-success'>View</a>
 
-                        {#<a href="{{ path('supplier_delete', {'id': supplier.id}) }}" class='btn btn-danger'>Delete</a>#}
+                        <a href="{{ path('supplier_delete', {'id': supplier.id}) }}" class='btn btn-danger'>Delete</a>
                         {#<a href="{{ path('supplier_update', {'id': supplier.id}) }}" class='btn btn-default'>Update</a>#}
 
                     </td>
@@ -30,4 +30,5 @@
             </tbody>
         </table>
     </div>
+    <a href="{{ path('supplier_create') }}" class="btn btn-primary">Create new</a>
 {% endblock %}
