--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -17,7 +17,7 @@
                 <tr>
                     <th scope="row">{{ user.id }}</th>
                     <td>{{ user.name }}</td>
-                    <td>{{user.dueDate|date('F j,Y, g:i a'}}</td>
+                    <td>{{ user.birthdate }}</td>
                     <td>{{ user.phone }}</td>
                     <td>{{ user.address }}</td>
                     <td>
