--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -17,13 +17,12 @@
                 <tr>
                     <th scope="row">{{ user.id }}</th>
                     <td>{{ user.name }}</td>
-                    <td>{{user.dueDate|date('F j,Y, g:i a'}}</td>
+                    <td>{{ user.birthdate|date('F j,Y, g:i a') }}</td>
                     <td>{{ user.phone }}</td>
                     <td>{{ user.address }}</td>
                     <td>
                         <a href="{{ path('user_view', {'id': user.id}) }} " class='btn btn-success'>View</a>
-                        <a href="{{ path('user_update', {'id': user.id}) }}" class='btn btn-default'>Update</a>
-                        <a href="{{ path('user_delete', {'id': user.id}) }}" class='btn btn-danger'>Delete</a>
+
                     </td>
                 </tr>
             {% endfor %}
