--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -22,7 +22,7 @@
                     <td>{{ user.address }}</td>
                     <td>
                         <a href="{{ path('user_view', {'id': user.id}) }} " class='btn btn-success'>View</a>
-
+                        <a href="{{ path('user_delete', {'id': user.id}) }}" class='btn btn-danger'>Delete</a>
                     </td>
                 </tr>
             {% endfor %}
