--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -29,4 +29,5 @@
             </tbody>
         </table>
     </div>
+    <a href="{{ path('user_create') }}" class="btn btn-primary">Create new</a>
 {% endblock %}
