--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,16 +29,17 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-<<<<<<< HEAD
+
                 <li><a href="{{ path('shoes_list') }}" class="active">Home</a></li>
 
 
 
-=======
+
                 <li><a href="{{ path('shoes_list') }}" class="active">Shoes</a></li>
                 <li><a href="{{ path('supplier_list') }}" class="active">Supplier</a></li>
                 <li><a href="{{ path('user_list') }}" class="active">User</a></li>
->>>>>>> da59167cfafc0b6d7d88f428201f7a90068ad63a
+                <li><a href="{{ path('orders_list') }}" class="active">Orders</a></li>
+
             </ul>
         </div><!--/.nav-collapse -->
     </div>
