--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -6,14 +6,14 @@
             <thead>
             <tr>
                 <th>#</th>
-                <th>User</th>
-                <th>Birthdate</th>
-                <th>Phone</th>
-                <th>Address</th>
+                <th>Date</th>
+                <th>Quantity</th>
+                <th>Total</th>
+
             </tr>
             </thead>
             <tbody>
-            {% for user in user %}
+            {% for orders in orders %}
                 <tr>
                     <th scope="row">{{ user.id }}</th>
                     <td>{{ user.name }}</td>
