--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -13,7 +13,7 @@
             </tr>
             </thead>
             <tbody>
-            {% for orders in orders %}
+            {% for user in user %}
                 <tr>
                     <th scope="row">{{ user.id }}</th>
                     <td>{{ user.name }}</td>
@@ -22,6 +22,7 @@
                     <td>{{ user.address }}</td>
                     <td>
                         <a href="{{ path('user_view', {'id': user.id}) }} " class='btn btn-success'>View</a>
+                        <a href="{{ path('user_update', {'id': user.id}) }}" class='btn btn-default'>Update</a>
                         <a href="{{ path('user_delete', {'id': user.id}) }}" class='btn btn-danger'>Delete</a>
                     </td>
                 </tr>
