--- a/templates/supplier/index.html.twig
+++ b/templates/supplier/index.html.twig
@@ -22,7 +22,7 @@
                         <a href="{{ path('supplier_view', {'id': supplier.id}) }} " class='btn btn-success'>View</a>
 
                         <a href="{{ path('supplier_delete', {'id': supplier.id}) }}" class='btn btn-danger'>Delete</a>
-                        {#<a href="{{ path('supplier_update', {'id': supplier.id}) }}" class='btn btn-default'>Update</a>#}
+                        <a href="{{ path('supplier_update', {'id': supplier.id}) }}" class='btn btn-default'>Update</a>
 
                     </td>
                 </tr>
