--- a/templates/orders/index.html.twig
+++ b/templates/orders/index.html.twig
@@ -20,12 +20,8 @@
                 <td>{{ orders.quantity }}</td>
                 <td>{{ orders.total }}</td>
                 <td>
-                    {#<a href="{{ path('todo_details', {'id': todo.id}) }} " class='btn btn-success'>View</a>#}
-                    {#<a href="{{ path('todo_edit', {'id': todo.id}) }}" class='btn btn-default'>Edit</a>#}
-                    {#<a href="{{ path('todo_delete', {'id': todo.id}) }}" class='btn btn-danger'>Delete</a>#}
-                    <a href="#" class='btn btn-success'>View</a>
-                    <a href="#" class='btn btn-default'>Edit</a>
-                    <a href="#" class='btn btn-danger'>Delete</a>
+                    <a href="{{ path('orders_view', {'id': orders.id}) }} " class='btn btn-success'>View</a>
+
                 </td>
             </tr>
         {% endfor %}
