--- a/templates/orders/index.html.twig
+++ b/templates/orders/index.html.twig
@@ -21,7 +21,7 @@
                 <td>{{ orders.total }}</td>
                 <td>
                     <a href="{{ path('orders_view', {'id': orders.id}) }} " class='btn btn-success'>View</a>
-
+                        <a href="{{ path('orders_delete', {'id': orders.id}) }}" class='btn btn-danger'>Delete</a>
                 </td>
             </tr>
         {% endfor %}
