--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,15 +1,37 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="bs-example" data-example-id="striped-table">
-        <table class="table table-striped">
+    <style>
+        body{
+            background-image: linear-gradient(0, rgba(0,0,0), rgba(0, 0, 0, 0.4)),
+            url({{ asset('img/shoes.jpg') }});
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            height: 680px;
+        }
+        .cart__content th{
+            text-align: center;
+            color: #ff6600;
+        }
+        .cart__content td{
+            text-align: center;
+        }
+        .cart__content .action{
+            width: 30%;
+        }
+
+    </style>
+    <section class="cart container">
+        <table class="table table-bordered cart__content table-dark ">
             <thead>
             <tr>
-                <th>#</th>
-                <th>Date</th>
-                <th>Quantity</th>
-                <th>Total</th>
-
+                <th scope="col">#</th>
+                <th scope="col">Name</th>
+                <th scope="col">Birthdate</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Address</th>
+                <th scope="col">Action</th>
             </tr>
             </thead>
             <tbody>
@@ -20,15 +42,15 @@
                     <td>{{ user.birthdate|date('F j,Y, g:i a') }}</td>
                     <td>{{ user.phone }}</td>
                     <td>{{ user.address }}</td>
-                    <td>
+                    <td class=" action">
                         <a href="{{ path('user_view', {'id': user.id}) }} " class='btn btn-success'>View</a>
-                        <a href="{{ path('user_update', {'id': user.id}) }}" class='btn btn-default'>Update</a>
+                        <a href="{{ path('user_update', {'id': user.id}) }}" class='btn btn-info'>Update</a>
                         <a href="{{ path('user_delete', {'id': user.id}) }}" class='btn btn-danger'>Delete</a>
                     </td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
-    </div>
-    <a href="{{ path('user_create') }}" class="btn btn-primary">Create new</a>
+        <a href="{{ path('user_create') }}" class="btn btn-primary">Create new</a>
+    </section>
 {% endblock %}
