update UI createSupplier and UI indexSupplier

--- a/templates/shoes/index.html.twig
+++ b/templates/shoes/index.html.twig
@@ -31,6 +31,7 @@
         <th scope="col">Category</th>
         <th scope="col">Inventory</th>
         <th scope="col">Price</th>
+        <th scope="col">Action</th>
     </tr>
     </thead>
         <tbody>
