--- a/templates/supplier/index.html.twig
+++ b/templates/supplier/index.html.twig
@@ -1,14 +1,35 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="bs-example" data-example-id="striped-table">
-        <table class="table table-striped">
+    <style>
+        body{
+            background-image: linear-gradient(0, rgba(0,0,0), rgba(0, 0, 0, 0.4)),
+            url({{ asset('img/shoes.jpg') }});
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            height: 680px;
+        }
+        .cart__content th{
+            text-align: center;
+            color: #ff6600;
+        }
+        .cart__content td{
+            text-align: center;
+        }
+        .cart__content .action{
+            width: 30%;
+        }
+    </style>
+    <section class="cart container">
+        <table class="table table-bordered cart__content table-dark ">
             <thead>
             <tr>
-                <th>#</th>
-                <th>Supplier</th>
-                <th>Address</th>
-                <th>Phone</th>
+                <th scope="col">#</th>
+                <th scope="col">Name</th>
+                <th scope="col">Address</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Action</th>
             </tr>
             </thead>
             <tbody>
@@ -18,17 +39,14 @@
                     <td>{{ supplier.name }}</td>
                     <td>{{ supplier.address }}</td>
                     <td>{{ supplier.phone }}</td>
-                    <td>
+                    <td class=" action">
                         <a href="{{ path('supplier_view', {'id': supplier.id}) }} " class='btn btn-success'>View</a>
-
                         <a href="{{ path('supplier_delete', {'id': supplier.id}) }}" class='btn btn-danger'>Delete</a>
-                        <a href="{{ path('supplier_update', {'id': supplier.id}) }}" class='btn btn-default'>Update</a>
-
+                        <a href="{{ path('supplier_update', {'id': supplier.id}) }}" class='btn btn-info'>Update</a>
                     </td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
-    </div>
-    <a href="{{ path('supplier_create') }}" class="btn btn-primary">Create new</a>
+        <a href="{{ path('supplier_create') }}" class="btn btn-primary">Create new</a>    </section>
 {% endblock %}
