--- a/templates/orders/create.html.twig
+++ b/templates/orders/create.html.twig
@@ -92,10 +92,17 @@
             }) }}
         </div>
         <div class="form-group">
+            <h4>User ID</h4>
+            {{ form_widget(form.User,{
+                'attr':{
+                    'class':'form-control',
+                    'placeholder': 'User ID'
+                }
+            }) }}
+        </div>
+        <div class="form-group">
             <input type="submit" name="create_orders" value="Create" class="btn"/>
         </div>
-
-
     </div>
     {{ form_end(form) }}
 {% endblock %}
