--- a/templates/orders/index.html.twig
+++ b/templates/orders/index.html.twig
@@ -29,18 +29,18 @@
                 <th scope="col">Date</th>
                 <th scope="col">Quantity</th>
                 <th scope="col">Total</th>
+                <th scope="col">User ID</th>
                 <th scope="col">Action</th>
-
             </tr>
             </thead>
             <tbody>
             {% for orders in orders %}
                 <tr>
                     <th scope="row">{{ orders.id }}</th>
-
                     <td>{{ orders.date|date('F j,Y, g:i a') }}</td>
                     <td>{{ orders.quantity }}</td>
                     <td>{{ orders.total }}</td>
+                    <td>{{ orders.user.id }}</td>
                     <td class=" action">
                         <a href="{{ path('orders_view', {'id': orders.id}) }} " class='btn btn-success'>View</a>
                         <a href="{{ path('orders_update', {'id': orders.id}) }}" class='btn btn-info'>Update</a>
