--- a/templates/orders/update.html.twig
+++ b/templates/orders/update.html.twig
@@ -92,6 +92,15 @@
             }) }}
         </div>
         <div class="form-group">
+            <h4>User ID</h4>
+            {{ form_widget(form.User,{
+                'attr':{
+                    'class':'form-control',
+                    'placeholder': 'User ID'
+                }
+            }) }}
+        </div>
+        <div class="form-group">
             <input type="submit" name="update_orders" value="Submit" class="btn"/>
         </div>
 
