--- a/templates/shoes/update.html.twig
+++ b/templates/shoes/update.html.twig
@@ -100,6 +100,15 @@
             }) }}
         </div>
         <div class="form-group">
+            <h4>Supplier</h4>
+            {{ form_widget(form.Supplier,{
+                'attr':{
+                    'class':'form-control',
+                    'placeholder': 'Supplier ID'
+                }
+            }) }}
+        </div>
+        <div class="form-group">
             <input type="submit" name="update_user" value="Submit" class="btn"/>
         </div>
     </div>
