update views Shoes and Orders

--- a/templates/orders/view.html.twig
+++ b/templates/orders/view.html.twig
@@ -53,6 +53,8 @@
             <p>{{ orders.quantity }}</p>
             <h3>Total</h3>
             <p>{{ orders.total }}</p>
+            <h3>User ID</h3>
+            <p>{{ orders.user.id }}</p>
             <a href="{{ path('shoes_list') }}" class="btn">Back to Shoes List</a>
         </div>
     </div>
