--- a/templates/shoes/create.html.twig
+++ b/templates/shoes/create.html.twig
@@ -57,6 +57,10 @@
             background: #4c4957;
             color: #ff6600;
         }
+        #shoes_create_Supplier{
+            background-color: transparent;
+            color: #ff6600;
+        }
     </style>
     {{ form_start(form) }}
     <div class="container create">
