--- a/templates/orders/create.html.twig
+++ b/templates/orders/create.html.twig
@@ -57,6 +57,10 @@
             background: #4c4957;
             color: #ff6600;
         }
+        #orders_create_User{
+            background-color: transparent;
+            color: #ff6600;
+        }
     </style>
     {{ form_start(form) }}
     <div class="container create">
@@ -92,11 +96,11 @@
             }) }}
         </div>
         <div class="form-group">
-            <h4>User ID</h4>
+            <h4>Username</h4>
             {{ form_widget(form.User,{
                 'attr':{
                     'class':'form-control',
-                    'placeholder': 'User ID'
+                    'placeholder': 'Username'
                 }
             }) }}
         </div>
