--- a/templates/orders/index.html.twig
+++ b/templates/orders/index.html.twig
@@ -29,7 +29,7 @@
                 <th scope="col">Date</th>
                 <th scope="col">Quantity</th>
                 <th scope="col">Total</th>
-                <th scope="col">User ID</th>
+                <th scope="col">Username</th>
                 <th scope="col">Action</th>
             </tr>
             </thead>
@@ -40,7 +40,7 @@
                     <td>{{ orders.date|date('F j,Y, g:i a') }}</td>
                     <td>{{ orders.quantity }}</td>
                     <td>{{ orders.total }}</td>
-                    <td>{{ orders.user.id }}</td>
+                    <td>{{ orders.user.name }}</td>
                     <td class=" action">
                         <a href="{{ path('orders_view', {'id': orders.id}) }} " class='btn btn-success'>View</a>
                         <a href="{{ path('orders_update', {'id': orders.id}) }}" class='btn btn-info'>Update</a>
