--- a/templates/orders/view.html.twig
+++ b/templates/orders/view.html.twig
@@ -53,9 +53,9 @@
             <p>{{ orders.quantity }}</p>
             <h3>Total</h3>
             <p>{{ orders.total }}</p>
-            <h3>User ID</h3>
-            <p>{{ orders.user.id }}</p>
-            <a href="{{ path('shoes_list') }}" class="btn">Back to Shoes List</a>
+            <h3>Username</h3>
+            <p>{{ orders.user.name }}</p>
+            <a href="{{ path('orders_list') }}" class="btn">Back to Orders List</a>
         </div>
     </div>
 
