--- a/templates/shoes/index.html.twig
+++ b/templates/shoes/index.html.twig
@@ -31,7 +31,7 @@
         <th scope="col">Category</th>
         <th scope="col">Inventory</th>
         <th scope="col">Price</th>
-        <th scope="col">Supplier ID</th>
+        <th scope="col">Supplier</th>
         <th scope="col">Action</th>
     </tr>
     </thead>
@@ -43,7 +43,7 @@
                     <td>{{ shoes.Category }}</td>
                     <td>{{ shoes.inventory }}</td>
                     <td>{{ shoes.price }}</td>
-                    <td>{{ shoes.supplier.id }}</td>
+                    <td>{{ shoes.supplier.name }}</td>
                     <td class=" action">
                         <a href="{{ path('shoes_view', {'id': shoes.id}) }} " class='btn btn-success'>View</a>
                         <a href="{{ path('shoes_update', {'id': shoes.id}) }}" class='btn btn-info'>Update</a>
