--- a/templates/shoes/view.html.twig
+++ b/templates/shoes/view.html.twig
@@ -55,8 +55,8 @@
             <p>{{ shoes.inventory }}</p>
             <h3>Price</h3>
             <p>{{ shoes.price }}</p>
-            <h3>Supplier ID</h3>
-            <p>{{ shoes.supplier.id }}</p>
+            <h3>Supplier</h3>
+            <p>{{ shoes.supplier.name }}</p>
             <a href="{{ path('shoes_list') }}" class="btn">Back to Shoes List</a>
         </div>
     </div>
