--- a/templates/orders/update.html.twig
+++ b/templates/orders/update.html.twig
@@ -100,7 +100,7 @@
             {{ form_widget(form.User,{
                 'attr':{
                     'class':'form-control',
-                    'placeholder': 'User ID'
+                    'placeholder': 'Username'
                 }
             }) }}
         </div>
