--- a/templates/shoes/update.html.twig
+++ b/templates/shoes/update.html.twig
@@ -108,7 +108,7 @@
             {{ form_widget(form.Supplier,{
                 'attr':{
                     'class':'form-control',
-                    'placeholder': 'Supplier ID'
+                    'placeholder': 'Supplier'
                 }
             }) }}
         </div>
