--- a/templates/shoes/create.html.twig
+++ b/templates/shoes/create.html.twig
@@ -108,12 +108,12 @@
             {{ form_widget(form.Supplier,{
                 'attr':{
                     'class':'form-control',
-                    'placeholder': 'Supplier ID'
+                    'placeholder': 'Supplier'
                 }
             }) }}
         </div>
         <div class="form-group">
-            <input type="submit" name="create_user" value="Submit" class="btn"/>
+            <input type="submit" name="create_user" value="Create" class="btn"/>
         </div>
     </div>
     {{ form_end(form) }}
